Support For 1.20.[6, 4, 2, 1]